syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "KindergartenServiceProto";

package kindergartenservice;

service KindergartenService {
  rpc CreateNotification (CreateNotificationRequest) returns (CreateNotificationResponse);
  rpc GetAllNotifications (GetAllNotificationsRequest) returns (GetAllNotificationsResponse);
  rpc SuspendChild (SuspendChildRequest) returns (SuspendChildResponse);
  rpc ReactivateChild (ReactivateChildRequest) returns (ReactivateChildResponse);
}

message CreateNotificationRequest {
  string title = 1;
  string text = 2;
  string visibleTo = 3;
}

message CreateNotificationResponse {
  bool success = 1;
  string message = 2;
  int64 id = 3;
}

message GetAllNotificationsRequest {}

message GetAllNotificationsResponse {
  bool success = 1;
  string message = 2;
  repeated NotificationInfo notifications = 3;
}

message NotificationInfo {
  int64 id = 1;
  string title = 2;
  string text = 3;
  string publishedAt = 4;
  string visibleTo = 5;
}

message SuspendChildRequest {
  int64 childId = 1;
}

message SuspendChildResponse {
  bool success = 1;
  string message = 2;
}

message ReactivateChildRequest {
  int64 childId = 1;
}

message ReactivateChildResponse {
  bool success = 1;
  string message = 2;
}